--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     
-    <!-- ✅ Desktop-first layout, mobile users can still zoom/scale -->
-    <meta name="viewport" content="width=1024" />
-
+    <!-- ✅ Mobile-first layout, scales to device width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
     <title>Keam Mock Test SFI GCEK</title>
     
     <style>
-      /* 🖥️ Default to desktop layout, allow scrolling on mobile */
+      /* 🖥️ Remove fixed desktop width, allow mobile scaling */
       html, body {
-        min-width: 1024px;
-        overflow-x: auto;
+        width: 100%;
+        overflow-x: hidden; /* Prevent horizontal scrolling */
       }
     </style>
   </head>
